--- a/client/index.html
+++ b/client/index.html
@@ -163,9 +163,9 @@
             </div>
 
             <!---- TABLE CONTAINER ---->
-            <div class="container-lg mt-3 overflow-scroll table-container-height">
+            <div class="container-lg mt-3 overflow-scroll table-container-height-pmk">
                 <!---<iframe src="./public/src/html/table_pemasukan.html" width="1050" height="300"></iframe>--->
-                <table class="table table-bordered border table-custom table-hover">
+                <table class="table table-bordered border table-custom-pmk table-hover">
                     <thead class="table-secondary">
                         <tr class="d-flex">
                             <th scope="col"><input type="checkbox" name="select-all-items" id="select-all-items"></th>
