Update 13: Adding Modules from NPM

--- a/client/pengeluaran_barang.html
+++ b/client/pengeluaran_barang.html
@@ -314,9 +314,9 @@
                                         <!---- R.I. NO. LAPORAN ---->
                                         <div>
                                             <label class="form-label">Nomor Laporan:</label><br>
-                                            <input type="radio" class="form-check-input" name="auto-increment-nomor" value="auto-increment-nomor" checked>
+                                            <input type="radio" class="form-check-input" name="nomor-laporan" id="auto-increment-nomor">
                                             <label for="auto-increment-nomor" class="form-label">Auto-Increment (Penomoran Otomatis)</label>
-                                            <input type="radio" class="form-check-input" checked="false" name="nomor-manual"
+                                            <input type="radio" class="form-check-input" checked="false" name="nomor-laporan"
                                             value="nomor-manual" id="nomor-manual">
                                             <label for="nomor-manual" class="form-label">Nomor Manual: </label>
                                             <input type="text" class="form-control mt-2" placeholder="Nomor Manual.." id="nomor-manual">
@@ -324,9 +324,9 @@
                                         
                                         <div>
                                             <label class="form-label">Tanggal Laporan:</label><br>
-                                            <input type="radio" class="form-check-input" name="auto-increment-date" id="auto-increment-date">
+                                            <input type="radio" class="form-check-input" name="tanggal-laporan" id="auto-increment-date">
                                             <label for="auto-increment-date" class="form-label">Auto-Increment (Penanggalan Otomatis)</label>
-                                            <input type="radio" class="form-check-input" name="date-manual"
+                                            <input type="radio" class="form-check-input" name="tanggal-laporan"
                                             value="date-manual" id="date-manual">
                                             <label for="date-manual" class="form-label">Tanggal Manual: </label>
                                             <input type="text" class="form-control mt-2" placeholder="Tanggal Manual.." id="date-manual">
