--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jakarta Duty Free</title>
-    <link rel="icon" href="/client/public/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
     <!---- IMPORT CSS ---->
-    <link rel="stylesheet" href="/client/public/assets/styles/css/style.css">
+    <link rel="stylesheet" href="assets/styles/css/style.css">
     <!---- IMPORT BOOTSTRAP ---->
-    <script src="../client/public/assets/js/bootstrap_v5.0.2/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap_v5.0.2/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     
